feat(plugin): skeleton with the extension and configuration checks
Module on the sborka conventions. The extension carries the DSL from research D9; the checks
refuse a project without the application plugin, a toolchain below 25 and ZGC below 26, and warn
on the JDK builds that carry JDK-8377932. Unit tests for the version boundary, TestKit tests
against the installed JDK 21 and 25.