@@ -1,7 +1,7 @@
 ---
 id: B-04
 title: "Каркас плагина: расширение zavarnik, проверки тулчейна до первой задачи"
-status: open
+status: done
 priority: P0
 size: M
 stage: stage-2-mvp
@@ -9,6 +9,14 @@ blocked_by: [B-01]
 ---
 
 # B-04 — Каркас плагина: расширение `zavarnik`, проверки тулчейна
+
+> **Сделано 06.09.2026.** Модуль `zavarnik-gradle-plugin` на sborka 0.3.0.31 (`io.github.youndie.sborka.*`),
+> Kotlin 2.4.10, тулчейн 25, пол 17. Расширение `zavarnik { jvmArgs; portability; cacheFileName;
+> training { readyWhen.url; workload { exec }; exitAfter; readyTimeout; shutdownTimeout }; verify {
+> minCachedShare; onCheck } }`. `ConfigurationChecks` в `afterEvaluate`: нет `application` — ошибка;
+> тулчейн < 25 — ошибка; `-XX:+UseZGC` при < 26 — ошибка с JEP 516; JDK с JDK-8377932 — предупреждение.
+> `JdkVersion` знает границу 25.0.4 / 26.0.2. Три юнит-теста, четыре TestKit-теста на настоящих JDK
+> 21 и 25.0.4 (Linux-машина) — зелёные. Задач ещё нет: они в B-05…B-07.
 
 Половина условий, при которых кэш не будет принят, известна на этапе конфигурации — до запуска
 чего-либо (ресёрч §1.1, §1.2, D8). Проверять их в `aotVerify` значит узнавать после тренировки то,
@@ -28,6 +36,7 @@ blocked_by: [B-01]
 - AC: проект с `id("…zavarnik")` и тулчейном 21 падает на конфигурации с текстом про JDK 25.
 - AC: `jvmArgs("-XX:+UseZGC")` при тулчейне 25 — ошибка с ссылкой на JEP 516.
 - AC: тулчейн 25.0.2 — предупреждение с номером JDK-8377932 в выводе.
-- Якоря: `docs/research/research-architecture.md` (§2, D8–D9), `experiments/aot-validation/run.sh`
-  (R11, E4 — условия, которые здесь предвосхищаются). Код: планируемый модуль
-  zavarnik-gradle-plugin, путей пока нет.
+- Якоря: `zavarnik-gradle-plugin/src/main/kotlin/io/github/youndie/zavarnik/ConfigurationChecks.kt`,
+  `zavarnik-gradle-plugin/src/main/kotlin/io/github/youndie/zavarnik/JdkVersion.kt`,
+  `zavarnik-gradle-plugin/src/functionalTest/kotlin/io/github/youndie/zavarnik/ConfigurationChecksFunctionalTest.kt`,
+  `docs/research/research-architecture.md` (§2, D8–D9).
